name:                dnolist
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Nikolay Amiantov
maintainer:          ab@fmap.me
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable dnolist
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , text
                     , conduit-network
                     , persistent
                     , stm
                     , attoparsec
                     , smtp
  hs-source-dirs:      src
  default-language:    Haskell2010
